--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.pyc
+.ipynb_checkpoints/
+*.html  # Se não quiser versionar mapas gerados
 
 # C extensions
 *.so
